[project]
name = "toggl-export"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Malanius Privierre", email = "malaniusprivierre@gmail.com" },
]
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.2",
    "pyperclip>=1.9.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "rich>=13.9.1",
]

[project.scripts]
toggl-export = "toggl_export.export:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.6.8",
]
